--- a/src/stylesheets/contact.css
+++ b/src/stylesheets/contact.css
@@ -21,6 +21,7 @@
     font-size: 1rem;
     font-weight: 700;
     margin-top: 30px;
+    margin-bottom: 20px;
     padding: 10px 30px;
     border-radius: 50px;
     border: black 1px solid;
