--- a/src/stylesheets/about.css
+++ b/src/stylesheets/about.css
@@ -1,6 +1,6 @@
 .headShot {
-    width: 100%; /* Ensure it uses the full width of the column */
-    height: 40vh; /* Maintain aspect ratio */
+    width: 100%; 
+    height: 40vh; 
     object-fit: cover;
 }
 p {
@@ -57,8 +57,6 @@ p {
         width: fit-content;
     }
 }
-
-
 
 @media (max-width: 991.98px) {
     .about01 {
